@@ -41,6 +41,7 @@
     * 0950 FIX: check_mkevents: now able to resolve the hostname of the remote hosts...
     * 0177 FIX: esx_vsphere_hostsystem.multipath: Fixed return state in case of paths in standby...
     * 1054 FIX: mysql_slave: Only monitor the age of the slave when it is running
+    * 1075 FIX: if, if64: Fixed PNP template in order to correctly scale Y axis
 
     Multisite:
     * 1013 Sort host names naturally, e.g. foobar11 comes after foobar2...
